chore: add member page

--- a/src/shared/containers/Member/styles.less
+++ b/src/shared/containers/Member/styles.less
@@ -1,11 +1,14 @@
-
-.list{
+.member-list{
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
   background-color: #fff1f0;
-}
-.list-item {
-  line-height: 30px;
   font-size: 14px;
-  margin-left: 15px;
+  line-height: 30px;
+  div {
+    width: 20%;
+    margin-left: 15px;
+  }
 }
 
 .list-title{
