chore: add cross-env

--- a/src/shared/components/Header/styles.less
+++ b/src/shared/components/Header/styles.less
@@ -15,6 +15,9 @@
 
 .github {
   float: right;
-  color: white;
   margin-right: 15px;
+  img{
+    height: 30px;
+    vertical-align: middle;
+  }
 }
